--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flat-color-icons": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-easy-crop": "^4.0.2",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
